containers/blockchain/kube-configs/ingress-setup/ingress-no-hosts.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/rewrite-target: /
  name: ingress
spec:
  tls:
  - hosts:
    - anthony-blockchain.us-south.containers.mybluemix.net
    secretName: anthony-blockchain
  # backend:
  #   serviceName: rabbitclient-api
  #   servicePort: 3000
  rules:
  - host: anthony-blockchain.us-south.containers.mybluemix.net
    http:
      paths:
      - path: /api
        backend:
          serviceName: rabbitclient-api
          servicePort: 3000
